--- a/estilos/style.css
+++ b/estilos/style.css
@@ -36,6 +36,24 @@ section#Celular{
     background: url(../imagens/frame-iphone.png) no-repeat;
 }
 
+section#redes-sociais img{
+    width: 50px;
+    margin: 10px;
+    border-radius: 50%;
+    box-shadow: 2px 2px 5px #0000003f;
+    box-sizing: border-box;
+}
+
+section#redes-sociais{
+    text-align: right;
+}
+section#redes-sociais img:hover{
+    border: 2px solid white;
+    transform: translate(-2px, -2px);
+    box-shadow: 4px 4px 10px #0000003f;
+    transition: transform .5s, border .2s;
+}
+
 iframe#tela{
     position: relative;
     top: 81px;
